fix footer outline alignment

--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -7,7 +7,6 @@
   &__outline {
     width: 100vw;
     position: relative;
-    bottom: 0.01rem;
     height: 10rem;
   }
 
